fix padding for nav bar on smaller screen and clean up component encapsulation

--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -70,6 +70,8 @@
   }
 
   .navbar-mobile {
+    padding: 0 1.5rem;
+
     .hamburger {
       background-color: transparent;
     }
@@ -94,7 +96,7 @@
       .drawer-nav-header {
         display: flex;
         justify-content: space-between;
-        margin: 1rem 3rem 0;
+        margin: 1rem 1.5rem 0;
 
         .drawer-nav-close {
           width: 50px;
